# WorkSpace-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
apps/activity_logs/: admin.py  apps.py  models.py  serializer.py  tasks.py  tests.py  urls.py  views.py
apps/activity_logs/migrations/: 0001_initial.py  0002_alter_activitylog_action.py  0003_remove_activitylog_action_activitylog_action_type_and_more.py
apps/projects/: admin.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_initial.py
apps/tasks/: models.py  permissions.py  serializer.py  tasks.py  tests.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_initial.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
