[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Askar"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.5"
djangorestframework = "^3.17.1"
psycopg2-binary = "^2.9.12"
djangorestframework-simplejwt = "^5.5.1"
drf-spectacular = "^0.29.0"
django-filter = "^25.2"
python-dotenv = "^1.2.2"
djoser = "^2.3.3"
celery = "^5.6.3"
redis = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]
